merged_repo.txt
PS C:\xau_rl> .\.venv\Scripts\python.exe pack_repo.py --repo . --out out_zip --max-size-mb 25
C:\xau_rl\pack_repo.py:13: SyntaxWarning: invalid escape sequence '\p'
  python zip_repo_split.py --repo C:\proj --out C:\out --code-only --max-size-mb 25
  File "C:\xau_rl\pack_repo.py", line 129
    print(f"[INFO] max ZIP size = {args.max_size_m b:.2f} MB")
                                   ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
